# BB60C-Analyzer

./: CMakeLists.txt  LICENSE  analyzer.h  mainwindow.cpp  resources.qrc  setup.iss  waterfallplot.cpp
BB60C-Analyzer/include/bb_api/: bb_api.cpp  bb_api.h
BB60C-Analyzer/src/: datamanager.cpp  demodulator.cpp  main.cpp  mainwindow.cpp  waterfallplot.cpp  waterfallplot.h
Yeni klasör (2)/: CMakeLists.txt  analyzer.cpp  datamanager.cpp  datamanager.h  demodulator.cpp  demodulator.h  mainwindow.h  resources.qrc  waterfallplot.h
Yeni klasör (2)/include/bb_api/: bb_api.h
Yeni klasör (2)/src/: analyzer.cpp  analyzer.h  datamanager.h  demodulator.h  main.cpp  mainwindow.cpp  mainwindow.h
